--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -96,13 +96,13 @@ The Apollo Router supports the following security levels, in increasing order of
 |Level|Description|
 |--|--|
 |**Performance-only**| Clients can optionally execute an operation on your router by providing the operation's PQL-specified ID.|
-|**Audit mode**| Executing operations by providing a PQL-specified ID is still optional, but the router also logs any unregistered operations.|
+|**Auditing**| Executing operations by providing a PQL-specified ID is still optional, but the router also logs any unregistered operations.|
 |**Safelisting with query strings allowed**| The router _rejects_ any incoming operations that aren't present in its PQL.|
 |**Safelisting with IDs only**| The router rejects any incoming operations that aren't present in its PQL, _and_ clients _must_ execute an operation by providing its PQL-specified ID.|
 
 > _You can find more details, including configuration instructions, in the [implementation section](#2-router-configuration)._
 
-These levels of permissiveness allow you to incrementally adopt safelisting on an app-by-app basis. Specifically, you can use audit mode until you're confident that _all_ your apps' trusted operations have been registered in the PQL. That way, you don't have to worry about turning on safelisting and accidentally rejecting one app's trusted operations. Refer to the [incremental adoption section](#incremental-adoption-path) for an overview.
+These levels of permissiveness allow you to incrementally adopt safelisting on an app-by-app basis. Specifically, you can use logging until you're confident that _all_ your apps' trusted operations have been registered in the PQL. That way, you don't have to worry about turning on safelisting and accidentally rejecting one app's trusted operations. Refer to the [incremental adoption section](#incremental-adoption-path) for an overview.
 
 ## Implementation steps
 
@@ -144,7 +144,7 @@ Therefore, implementation also requires some collaboration among these parties. 
   </tbody>
 </table>
 
-If you have multiple clients and apps, you can approach these steps iteratively, completing each for one client at a time. While doing this, you should use the audit mode—or "dry run"—[security level](#security-level). Once your PQL has registered all your clients' operations and you've ensured your client apps are only sending trusted operations, you can update your security level to safelisting mode.
+If you have multiple clients and apps, you can approach these steps iteratively, completing each for one client at a time. While doing this, you should use the auditing—or "dry run"—[security level](#security-level). Once your PQL has registered all your clients' operations and you've ensured your client apps are only sending trusted operations, you can update your security level to safelisting mode.
 
 Continue reading for details on each implementation step, or skip to the [incremental adoption section](#incremental-adoption-path) for the recommended strategy for incremental adoption. (This section assumes you have a high-level understanding of each implementation step.)
 
@@ -408,14 +408,14 @@ As you may recall, the Apollo Router supports the following [security levels](#s
 - **Performance-only**: Clients can optionally execute an operation on your router by providing the operation's PQL-specified ID.
     - All other levels also provide this core capability.
     - This level provides no operation safelisting.
-- **Audit mode**: Executing operations by providing a PQL-specified ID is still optional, but the router also logs any unregistered operations.
+- **Auditing**: Executing operations by providing a PQL-specified ID is still optional, but the router also logs any unregistered operations.
     - The level serves as a dry run and helps you identify operations you may still need to register before turning on safelisting.
 - **Safelisting with query strings allowed**: The router _rejects_ any incoming operations that aren't present in its PQL.
     - Before moving to this security level, ensure _all_ your client operations are present in your PQL.
 - **Safelisting with IDs only**: The router rejects any incoming operations that aren't present in its PQL, _and_ clients _must_ execute an operation by providing its PQL-specified ID.
     - Before moving to this security level, ensure _all_ your clients execute operations by providing their PQL-specified ID.
 
-When you first adopt persisted queries, you should start with a less restrictive security level—either [performance-only](#performance-only) or [audit mode](#audit-mode-dry-run). You can then enable increasingly restrictive levels after you update all your clients.
+When you first adopt persisted queries, you should start with a less restrictive security level—either [performance-only](#performance-only) or [auditing](#auditing-dry-run). You can then enable increasingly restrictive levels after you update all your clients.
 
 See below for sample YAML configurations for each level.
 
@@ -432,9 +432,9 @@ apq:
 
 This enables your clients to execute operations by providing their PQL-specified ID (instead of the full query string). Your router also continues to accept full query strings, even for operations that _don't_ appear in its PQL.
 
-#### Audit mode (dry run)
+#### Auditing (dry run)
 
-Turning on logging is crucial for gauging how ready your client apps are for safelisting. The logs identify which operations you need to either add to your PQL or stop your client apps from making. 
+Turning on logging is crucial for gauging your client apps' readiness for safelisting. The logs identify which operations you need to either add to your PQL or stop your client apps from making. 
 
 To turn on logging for unregistered queries, enable the `log_unknown` property:
 
@@ -518,7 +518,7 @@ If your router's PQL includes an operation with an ID that matches the value of 
 
 After your router is running with persisted queries enabled, you can update your client apps to execute operations using their PQL-specified ID instead of sending full query strings.
 
-To do this, clients can use the same protocol that's used for automatic persisted queries (APQ). 
+To do this, clients can use the same protocol used for automatic persisted queries (APQ). 
 
 Here's the JSON body of a request to execute an operation by its ID:
 
@@ -546,19 +546,54 @@ Here are links to documentation for APQ mechanisms in Apollo Client libraries:
 
 ## Incremental adoption path
 
-The tiered security levels allow you to adopt an incremental approach, rather than turning on registered persisted queries for all your client apps at once.
+Persisted queries' [tiered security levels](#security-levels) let you adopt an incremental approach rather than simultaneously requiring all clients to query via trusted operations IDs. You can follow these steps for incremental adoption:
 
-**To-do: Detailed recipe for incremental adoption**
+1. Identify the first client you want to implement persisted queries with. It could be the client or team you're most comfortable with or the one most comfortable with GraphOS.
+2. Follow all [implementation steps](#implementation-steps) for your chosen client:
+    1. Begin by [creating a PQL in GraphOS](#11-pql-creation).
+    1. When [linking the PQL](#12-link-the-pql-to-variants) to a variant, start with a testing or staging  environment.
+    1. Use the [client-specific tooling](#generation-methods) to generate an [operation manifest](#13-generate-client-operation-manifests) as part of your client's CI/CD pipeline.
+    1. [Publish the manifest](#14-publish-manifests-to-the-pql) to the PQL.
+    1. When [configuring the router](#2-router-configuration), start with either [performance-only](#performance-only) or [auditing](#auditing-dry-run) mode.
+    1. [Update your chosen client](#3-client-updates) to use only trusted operations, either by full query string or operation ID.
+    1. If you haven't already, [configure your router](#2-router-configuration) to use [auditing](#auditing-dry-run) mode. Use the router logs to confirm that your the client is only sending trusted operations.
+    1. [Link the PQL](#12-link-the-pql-to-variants) to a production variant.
+3. Continue to monitor your router logs: once you consistently see that unregistered operations are being logged and registered ones aren't, you've completed most of the setup for this client! 🎉
 
-Incorporate this section somehow:
+If safelisting is your goal, you'll need to [coordinate across client teams](#coordinate-with-client-teams) to complete these steps for each of your client apps. You may need to toggle between linking staging and production variants as you test each of your clients operations.
 
-#### Coordinate with client teams
+Once your router's logs are clear of unexpected operations, you can configure your router to use [safelisting mode](#router-security-levels). Then, update your client apps to use IDs rather than full query strings.
 
-1. Identify all of the client apps that execute operations against your router, along with the GraphQL client libraries that those apps use.
+Once you've confirmed all client apps use IDs, you can move to the most restrictive [security level](#router-security-levels): safelisting with IDs only.
+This security level enforces the performance benefit of using operation IDs rather than full query strings. If you're content with the safelisting aspect of persisted queries with optional performance benefits, you don't need to enable it.
+
+### Coordinate with client teams
+
+Once you've followed the implementation steps for one client, you can coordinate across all your client teams:
+
+1. Identify all the client apps that execute operations against your router, along with the GraphQL client libraries that those apps use.
     - Before you enable safelisting in your router, your client apps must start publishing their operations to your PQL.
-2. Communicate to all of your client development teams that adopting persisted queries will require adding tooling to their CI/CD pipeline.
-    - Specifically, each client team will need to perform the following steps of this adoption path: [Generate client operation manifests](#3-generate-client-operation-manifests) and [Publish manifests to the PQL](#4-publish-operations-to-the-pql)
+2. Communicate to your client development teams that adopting persisted queries will require adding tooling to their CI/CD pipeline.
+    - Specifically, each client team will need to perform the following steps of this adoption path: [Generate client operation manifests](#13-generate-client-operation-manifests) and [publish manifests to the PQL](#14-publish-operations-to-the-pql)
 3. Identify which team members will assist with adding tooling to their respective CI/CD pipelines.
+
+```mermaid
+graph LR;
+
+  subgraph "CI/CD"
+  webClient("Web client<br/>build");
+  androidClient("Android client<br/>build");
+  iosClient("iOS client<br/>build");
+  end
+
+  subgraph "GraphOS"
+  pql[[Persisted<br/>Query List]];
+  end
+
+  webClient & androidClient & iosClient -->|Publishes<br/>operations|pql
+```
+
+Guide each client team to follow the implementation steps presented in the [incremental adoption path](#incremental-adoption-path).
 
 ## Manifest format
 
